# Librarian

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
crates/librarian-classifier/: Cargo.toml
crates/librarian-classifier/src/: confidence.rs  content.rs  embedding.rs  lib.rs  llm.rs  pipeline.rs  qdrant.rs
crates/librarian-cli/: Cargo.toml
crates/librarian-cli/src/: main.rs  output.rs
crates/librarian-cli/src/commands/: apply.rs  config.rs  correct.rs  init.rs  mod.rs  plans.rs  process.rs  review.rs  rollback.rs  rules.rs  status.rs  suggest.rs  uninstall.rs  update.rs  watch.rs
crates/librarian-cli/tests/: cli_smoke.rs  corrections.rs  plan_lifecycle.rs  regression.rs
crates/librarian-core/: Cargo.toml
crates/librarian-core/src/: config.rs  decision.rs  file_entry.rs  hasher.rs  ignore.rs  lib.rs  plan.rs  tags.rs  walker.rs
crates/librarian-learning/: Cargo.toml
crates/librarian-learning/src/: centroid.rs  corrections.rs  fewshot.rs  lib.rs  watcher.rs
crates/librarian-providers/: Cargo.toml
crates/librarian-providers/src/: cache.rs  lib.rs  lmstudio.rs  openai.rs  router.rs  sse.rs  traits.rs
crates/librarian-rules/: Cargo.toml
crates/librarian-rules/src/: engine.rs  lib.rs  loader.rs  suggestion.rs
examples/: config.yaml  rules.yaml
mcp-server/: README.md  index.ts  package.json
scripts/: install.sh  release.sh
specs/001-rust-file-organiser-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rust-file-organiser-cli/checklists/: requirements.md
specs/001-rust-file-organiser-cli/contracts/: cli-commands.md  provider-api.md
tests/fixtures/: sample_config.yaml  sample_rules.yaml
tests/fixtures/sample_files/: expenses.csv  invoice_acme_q1.txt  notes.md
