[package]
name = "librarian-classifier"
version.workspace = true
edition.workspace = true

[dependencies]
librarian-core.workspace = true
librarian-providers.workspace = true
librarian-rules.workspace = true
qdrant-client.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
mockito.workspace = true
tempfile.workspace = true
