[package]
name = "librarian-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "librarian"
path = "src/main.rs"

[dependencies]
librarian-core.workspace = true
librarian-rules.workspace = true
librarian-providers.workspace = true
librarian-classifier.workspace = true
librarian-learning.workspace = true
blake3.workspace = true
chrono.workspace = true
clap.workspace = true
clap_complete.workspace = true
tokio.workspace = true
indicatif.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tempfile.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true
mockito.workspace = true
predicates.workspace = true
serde_yaml.workspace = true
