[package]
name = "librarian-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
blake3.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
xattr.workspace = true
plist.workspace = true
ignore.workspace = true

[dev-dependencies]
tempfile.workspace = true
