[package]
name = "librarian-learning"
version.workspace = true
edition.workspace = true

[dependencies]
librarian-core.workspace = true
librarian-providers.workspace = true
notify.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
chrono.workspace = true
blake3.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true
