[package]
name = "librarian-providers"
version.workspace = true
edition.workspace = true

[dependencies]
librarian-core.workspace = true
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
blake3.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true

[dev-dependencies]
mockito.workspace = true
tempfile.workspace = true
